# txsuite

./: .gitignore  README.md  pyproject.toml  txsuite.toml
.github/workflows/: ci.yml  containers.yml
docs/: compatibility.md  release.md  roadmap.md  slurm.md
examples/bulk/: counts.tsv  metadata.tsv  pathways.example.gmt  rnaseq-params.example.json  samplesheet.example.csv
examples/single_cell/: samplesheet.example.csv  scrnaseq-params.example.json
examples/single_cell/filtered_feature_bc_matrix/: barcodes.tsv  features.tsv  matrix.mtx
examples/slurm/: nextflow.config
examples/spatial/: README.md
src/txsuite/: __init__.py  bulk.py  catalog.py  cli.py  config.py  hardening.py  runtime.py  single_cell.py  spatial.py
src/txsuite/resources/: __init__.py
src/txsuite/resources/bulk_r/: Dockerfile  __init__.py  alternative_de.R  deseq2.R  enrichment.R
src/txsuite/resources/nextflow/: __init__.py  main.nf  nextflow.config
src/txsuite/resources/nextflow/modules/: deseq2.nf  pseudobulk.nf
src/txsuite/resources/nextflow/profiles/: apptainer.config  docker.config
src/txsuite/resources/single_cell_python/: Dockerfile  __init__.py  single_cell.py
src/txsuite/resources/spatial_python/: Dockerfile  __init__.py  spatial.py
tests/: test_bulk_methods.py  test_container_workflow.py  test_foundation.py  test_nextflow_workflow.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
